@@ -1,5 +1,9 @@
 2008-04-28  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* libavogadro/src/engines/orbitalengine.*,
+	libavogadro/src/engines/orbitalsettingswidget.ui: Only recalculate the
+	isosurface when editing is finished, minimum spinner value of zero.
+
 	* avogadro/src/mainwindow.cpp: Tracked the bug of the disappearing
 	molecule - it was never set for extensions after the first window.
 
